--- a/estilos.css
+++ b/estilos.css
@@ -392,7 +392,6 @@ details p {
 }
 /* INSPIRACION */
 #inspiracion__section {
-  /* height: auto; */
   height: 2270px;
 }
 iframe {
@@ -775,7 +774,10 @@ select {
     line-height: normal;
   }
   .calculadora-container {
-    height: 200px;
+    height: 210px;
+  }
+  #paisajista, #ubicacion{
+    margin-left: 20px;
   }
   /* ******************** FOTOS ******************** */
   #vermas__fotos {
@@ -1022,7 +1024,7 @@ select {
 
   /* INSPIRACION */
   #inspiracion__section {
-    height: 3800px;
+    height: 3000px;
   }
   iframe {
     height: 300px;
@@ -1034,20 +1036,35 @@ select {
   }
 
   .jardines-img {
-    height: auto;
+    height: 200px;
     width: 95%;
+    margin-left: 7px;
   }
 
   .jardines-img:hover {
     transform: scale(1.05);
   }
-  .jardines__section-div {
-    height: 50px;
-    margin-top: 180px;
+  #div-js {
     position: relative;
-    top: 70px;
+    top: 30px;
   }
 
+  .jardines__section-div {
+    height: 50px;
+    position: relative;
+    top: 15px;
+  }
+  .jardines__section-h2 {
+    font-size: 18px;
+  }
+
+  #h2-js, #sub-js{
+    line-height: 1.5em;
+  }
+  #sub-js{
+    display: none;
+  }
+  
   /* CONTACTO */
   #contacto__section {
     height: auto;
@@ -1083,13 +1100,15 @@ select {
     width: 50%;
     margin: 15px auto;
   }
+  
   .calculadora__section-div {
     height: auto;
     margin-top: -40px;
   }
   .calculadora-container {
-    height: auto;
+    height: 270px;
     padding: 20px;
+    position: relative;
   }
   .calculadora__section-h2 {
     font-size: 20px;
@@ -1098,12 +1117,16 @@ select {
     line-height: normal;
   }
 
-  #paisajista, #ubicacion {
+  #paisajista,
+  #ubicacion {
     width: 100%;
     margin: 10px 0;
   }
-  #calcularCosto{
-      margin: 10px 60px 15px;
+  #calcularCosto {
+    position: absolute;
+    z-index: 100000;
+    bottom: 10%;
+    left: 33%;
   }
   /* FOTOS */
   #vermas__fotos {
