--- a/estilos.css
+++ b/estilos.css
@@ -64,7 +64,23 @@ header {
   border: 10px solid #fff;
   border-radius: 50%;
   box-shadow: 0 0 7px #262626;
+
+  animation-name: logoanimado;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
+
+@keyframes logoanimado {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(10deg);
+  }
+}
+
 /* Barra de navegación */
 #nav {
   background: #ff7aba;
@@ -545,7 +561,7 @@ select {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-.webpaisajistas-li{
+.webpaisajistas-li {
   flex: 1 0 auto;
   text-align: center;
   width: 25%;
@@ -557,14 +573,15 @@ select {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  filter: grayscale(90%);
 }
 .webpaisajistas-a:hover {
-  /* background-color:hsla(360, 100%, 100%, 0.7); */
-  /* color: #ff7aba; */
   border-radius: 7px;
   transform: scale(1.1);
+  transition: 0.3s;
+  filter: none;
 }
-.webpaisajistas-img{
+.webpaisajistas-img {
   width: 50%;
   border-radius: 50%;
 }
@@ -659,7 +676,6 @@ select {
   left: 65px;
   z-index: 10000;
   cursor: pointer;
-  /* visibility: hidden; */
   opacity: 0;
   transition: visibility 0.7s, opacity 0.4s linear;
 }
@@ -868,7 +884,7 @@ select {
   .calculadora-container {
     height: 210px;
   }
-  .webpaisajistas-container{
+  .webpaisajistas-container {
     height: 190px;
   }
   #paisajista,
@@ -1237,7 +1253,7 @@ select {
     height: auto;
     margin-top: -40px;
   }
-  
+
   .calculadora-container,
   .webpaisajistas-container {
     height: 270px;
@@ -1265,25 +1281,25 @@ select {
     bottom: 10%;
     left: 33%;
   }
-  
-  .webpaisajistas-container{
+
+  .webpaisajistas-container {
     height: auto;
   }
-  
+
   .webpaisajistas-ul {
     display: block;
   }
-  .webpaisajistas-li{
+  .webpaisajistas-li {
     width: 100%;
   }
-  .webpaisajistas-a{
+  .webpaisajistas-a {
     margin-left: 20px;
     margin-right: 20px;
   }
-  .webpaisajistas-img{
+  .webpaisajistas-img {
     width: 30%;
   }
-  .webpaisajistas-a:hover{
+  .webpaisajistas-a:hover {
     transform: scale(1.1);
   }
 
