--- a/estilos.css
+++ b/estilos.css
@@ -476,11 +476,12 @@ video {
   color: #fff;
   background-color: #ff7aba;
   width: 840px;
-  height: 480px;
+  height: 530px;
   margin: 60px;
   border-radius: 20px;
   padding: 5px 0;
   box-shadow: 2px 2px 4px #262626;
+  position: relative;
 }
 .contacto__foto {
   float: left;
@@ -493,15 +494,18 @@ video {
   box-shadow: 2px 2px 4px #262626;
   border: 7px solid #bf7aff;
   margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 .contacto__formulario {
-  float: left;
-  margin-left: 15px;
-  margin-top: 25px;
+  /* background-color: blue; */
+  position: absolute;
+  left: 520px;
+  top: 30px;
 }
+
+
 label {
-  font-size: 25px;
+  font-size: 20px;
 }
 input,
 textarea,
@@ -523,6 +527,20 @@ textarea {
 }
 select {
   font-size: 15px;
+}
+#archivos{
+  width: 285px;
+  height: 115px;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #bf7aff;
+  color: #fff;
+  border-radius: 7px;
+  overflow: scroll;
+  border: 2px dotted white;
+}
+#archivos p {
+  text-align: center;
 }
 #submit {
   height: 30px;
